fix(facts): align share button to bottom

--- a/themes/shiro/assets/src/sass/css/scss/objects/_facts.scss
+++ b/themes/shiro/assets/src/sass/css/scss/objects/_facts.scss
@@ -102,6 +102,8 @@
   z-index: 999;
   border: 1px solid $wmui-color-base80;
   padding: rem(20);
+  display: flex;
+  flex-direction: column;
 
   .inline-social-list {
     font-weight: bold;
@@ -110,6 +112,12 @@
       height: 20px;
       margin: 0;
     }
+  }
+
+  .social-share {
+    margin-top: auto;
+    width: 100%;
+    align-self: flex-end;
   }
 }
 
